Fix grid alignment in about section.

--- a/styles/style.css
+++ b/styles/style.css
@@ -330,7 +330,7 @@ footer img:hover {
   .about {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto 1fr;
+    grid-template-rows: auto auto 1fr;
   }
 
   .about h2 {
@@ -339,14 +339,18 @@ footer img:hover {
   }
 
   .about p {
-    grid-row: 2 / 3;
+    grid-row: 2 / 4;
     grid-column: 1 / 2;
   }
 
-  .skills {
+  .about h3 {
     grid-row: 2 / 3;
     grid-column: 2 / 3;
-    padding: 0;
+  }
+
+  .skills {
+    grid-row: 3 / 4;
+    grid-column: 2 / 3;
   }
 
   .project {
